# tts

./: .gitignore  README.md  prompts.yaml  pyproject.toml  requirements.txt
docs/: ADDING_A_MODEL.md  DATASET_FORMATS.md
tests/: test_audio_metrics.py  test_prompts.py  test_results.py
ttsbench/: __init__.py
ttsbench/cli/: main.py
ttsbench/metrics/: __init__.py  asr_metrics.py  audio_metrics.py  speaker_similarity.py
ttsbench/models/: __init__.py  base.py  registry.py
ttsbench/models/plugins/: __init__.py  coqui_xtts.py  piper.py  stub.py
ttsbench/utils/: audio.py  logging.py  prompts.py  report.py  results.py
